add ai update resume for vacanci
